fix: style tweaks for inconsistent button spacing (#13254)
* fix: button margin glitches

* removing unncessary fragment

* removing grid gap

* Revert "removing unncessary fragment"

This reverts commit 659e27348f705a85d203a4c1b77d78188200614d.

--- a/superset-frontend/src/SqlLab/main.less
+++ b/superset-frontend/src/SqlLab/main.less
@@ -372,7 +372,6 @@ div.tablePopover {
 .ResultSetButtons {
   display: grid;
   grid-auto-flow: column;
-  grid-gap: 4px;
   padding-right: 8px;
 }
 
